fix: jwt on validate
