# docs/swagger.json
@@ -110,6 +110,11 @@
         },
         "/auth/validate": {
             "get": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
                 "description": "Get payload data auth",
                 "consumes": [
                     "application/json"
